Add audio prompt overlay and implement audio playback functionality

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
   <link rel="manifest" href="./site.webmanifest">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="ZWYΞ$KɎ contact page with animated triangle background." />
 
   <link rel="stylesheet" href="./src/style.css" />
 </head>
 
 <body>
   <canvas id="triangleCanvas"></canvas>
-  
+
+  <!-- Audio prompt overlay -->
+  <div id="audioPrompt" class="audio-prompt">
+    <div class="audio-prompt-content" id="playAudioButton" >
+
+    </div>
+  </div>
+
   <div class="grid-container">
     <div class="overflow-container">
       <div class="bottom-overflow"></div>
