--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
   <link rel="manifest" href="./site.webmanifest">
-  
+
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
@@ -23,8 +23,17 @@
 
   <!-- Audio prompt overlay -->
   <div id="audioPrompt" class="audio-prompt">
-    <div class="audio-prompt-content" id="playAudioButton" >
-
+    <div class="audio-prompt-content">
+      <button id="playAudioButton" class="play-button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mouse-pointer-click-icon lucide-mouse-pointer-click">
+          <path d="M14 4.1 12 6" />
+          <path d="m5.1 8-2.9-.8" />
+          <path d="m6 12-1.9 2" />
+          <path d="M7.2 2.2 8 5.1" />
+          <path d="M9.037 9.69a.498.498 0 0 1 .653-.653l11 4.5a.5.5 0 0 1-.074.949l-4.349 1.041a1 1 0 0 0-.74.739l-1.04 4.35a.5.5 0 0 1-.95.074z" />
+        </svg>
+        <span>Tap to play audio</span>
+      </button>
     </div>
   </div>
 
