Refactor theme color meta tags for better media query support and enhance CSS for improved layout and accessibility

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
   <link rel="manifest" href="./site.webmanifest">
 
-  <meta name="theme-color" content="#0A0A0A">
+  <meta name="theme-color" content="#0A0A0A" media="(prefers-color-scheme: dark)">
+  <meta name="theme-color" content="#0A0A0A" media="(prefers-color-scheme: light)">
+
+  <meta name="apple-mobile-web-app-title" content="ZWYΞ$KɎ">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
