--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
   <div class="grid-container">
     <div class="overflow-container">
+      <div class="top-overflow"></div>
       <div class="bottom-overflow"></div>
       <div class="left-overflow"></div>
       <div class="right-overflow"></div>
@@ -77,7 +78,6 @@
   </div>
 
   <script type="module" src="./src/main.js"></script>
-  
 
   <script>
     document.addEventListener('pointerup', () => {
